src/stylesheets/layout/_common.scss
/* ------ CONTAINERS ------ //*/

.l-container {
  &__label-group {
    width: 100%;
    max-width: 490px;
    margin-top: 59px;
  }

  &__repo-link-group {
    width: 75%;
    max-width: 390px;
    margin: 40px 0;
  }
}



/* -------- Layout Utility Classes --------- //*/
.u-centered {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.u-justify-center {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.u-space-around {
  -ms-flex-pack: distribute;
      justify-content: space-around;
}

.u-space-between {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.u-pos-relative {
  position: relative;
}

.u-width-100 {
  width: 100%;
}


/* -------- FONT AWESOME --------- */
// The following classes pertain to fontawesome icons

.fa {
  @include media(tablet) {
    font-size: 2em !important;
  }
}

